[gd_scene load_steps=10 format=3 uid="uid://bndg8lby7s2kk"]

[ext_resource type="Script" path="res://showdown/showdown.gd" id="1_svx04"]
[ext_resource type="Texture2D" uid="uid://bstko3k7bwre5" path="res://assets/Art/3F59F722-26A0-4A14-B182-F57373574DC1.jpeg" id="2_knugo"]
[ext_resource type="PackedScene" uid="uid://cr011ueubbvej" path="res://showdown/actor.tscn" id="3_5oegv"]
[ext_resource type="Theme" uid="uid://co2a1cb3h1kb2" path="res://themes/Showdown/theme.tres" id="4_xncoc"]
[ext_resource type="PackedScene" uid="uid://2vtn8mjr0n1n" path="res://showdown/popularity_bar.tscn" id="5_0j51a"]
[ext_resource type="Script" path="res://showdown/JokeChoicePanel.gd" id="6_5qlw4"]
[ext_resource type="PackedScene" uid="uid://d0p7s057is5o" path="res://showdown/joke_category_choice.tscn" id="6_yf8cr"]
[ext_resource type="PackedScene" uid="uid://c4fon5fyxs6d3" path="res://showdown/joke_option.tscn" id="7_hsgam"]
[ext_resource type="AudioStream" uid="uid://ceoutl0aoyewd" path="res://assets/music/Battle Song.mp3" id="9_0a6ip"]

[node name="Showdown" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_svx04")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_knugo")
metadata/_edit_lock_ = true

[node name="2DScene" type="Node2D" parent="."]

[node name="Actors" type="Node" parent="2DScene"]

[node name="Lion" parent="2DScene/Actors" instance=ExtResource("3_5oegv")]
position = Vector2(725, 313)
animation = &"possum_talking"
character_name = "lion"

[node name="Possum" parent="2DScene/Actors" instance=ExtResource("3_5oegv")]
position = Vector2(288, 322)
animation = &"possum_talking"
character_name = "possum"

[node name="Dolphin" parent="2DScene/Actors" instance=ExtResource("3_5oegv")]
position = Vector2(978, 256)
animation = &"dolphin_default"
character_name = "dolphin"

[node name="Bird" parent="2DScene/Actors" instance=ExtResource("3_5oegv")]
position = Vector2(487, 229)
animation = &"possum_talking"
character_name = "bird"

[node name="Markers" type="Node" parent="2DScene"]

[node name="Active" type="Marker2D" parent="2DScene/Markers"]
position = Vector2(685, 343)

[node name="Next" type="Marker2D" parent="2DScene/Markers"]
position = Vector2(339, 276)

[node name="OnDeck" type="Marker2D" parent="2DScene/Markers"]
position = Vector2(499, 190)

[node name="Last" type="Marker2D" parent="2DScene/Markers"]
position = Vector2(939, 262)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -180.0
offset_bottom = 201.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_xncoc")

[node name="Margin" type="MarginContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Row" type="HBoxContainer" parent="UI/Panel/Margin"]
layout_mode = 2

[node name="Popularity" parent="UI/Panel/Margin/Row" instance=ExtResource("5_0j51a")]
layout_mode = 2

[node name="Popularity2" parent="UI/Panel/Margin/Row" instance=ExtResource("5_0j51a")]
layout_mode = 2

[node name="Popularity3" parent="UI/Panel/Margin/Row" instance=ExtResource("5_0j51a")]
layout_mode = 2

[node name="Popularity4" parent="UI/Panel/Margin/Row" instance=ExtResource("5_0j51a")]
layout_mode = 2

[node name="JokeBubbleContainer" type="Container" parent="UI"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.527
anchor_top = 0.065
anchor_right = 0.839
anchor_bottom = 0.244
offset_left = -0.559998
offset_top = 0.199997
offset_right = 0.0799561
offset_bottom = 0.319992

[node name="JokeChoicePanel" type="Panel" parent="UI"]
anchors_preset = -1
anchor_left = 0.185156
anchor_top = 0.573611
anchor_right = 0.792969
anchor_bottom = 0.905556
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_xncoc")
script = ExtResource("6_5qlw4")
metadata/_edit_use_anchors_ = true

[node name="Margins" type="MarginContainer" parent="UI/JokeChoicePanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Column" type="VBoxContainer" parent="UI/JokeChoicePanel/Margins"]
layout_mode = 2

[node name="JokeOption" parent="UI/JokeChoicePanel/Margins/Column" instance=ExtResource("7_hsgam")]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Joke Text
"

[node name="Categories" type="Node" parent="UI/JokeChoicePanel"]

[node name="Offend" parent="UI/JokeChoicePanel/Categories" instance=ExtResource("6_yf8cr")]
offset_left = 343.0
offset_top = 515.0
offset_right = 504.0
offset_bottom = 582.0
rotation = 0.271645

[node name="Observe" parent="UI/JokeChoicePanel/Categories" instance=ExtResource("6_yf8cr")]
offset_left = 525.0
offset_top = 455.0
offset_right = 719.0
offset_bottom = 522.0
rotation = -0.0230363
theme_override_colors/font_color = Color(0.192157, 0.25098, 0.909804, 1)
text = "Observe"

[node name="Outsmart" parent="UI/JokeChoicePanel/Categories" instance=ExtResource("6_yf8cr")]
offset_left = 703.0
offset_top = 539.0
offset_right = 927.0
offset_bottom = 606.0
theme_override_colors/font_color = Color(0.596078, 0.788235, 0.364706, 1)
text = "Outsmart
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0a6ip")
autoplay = true
